--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "knex": "^0.16.3",
     "pg": "^7.8.0",
     "prop-types": "^15.6.2",
